[package]
name = "switch_background"
version = "0.1.0"
authors = ["Timm Behner <timm.behner@fkie.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
structopt = "0.3"
shellexpand = "2"
anyhow = "*"
reqwest = {version = "0.11.3", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
neovim-lib = "0.6"
glob = "*"
regex = "1"
